# wdisplays-plus

./: .clang-format  CHANGELOG.md  README.md  meson.build
.reuse/: dep5
resources/: head.ui  meson.build  resources.xml.in  wdisplays.desktop.in  wdisplays.gschema.xml  wdisplays.ui
src/: headform.c  headform.c.orig  headform.h  main.c  meson.build  outputs.c  store.c  wdisplays.h
